--- a/com-308-project_empty.ipynb
+++ b/com-308-project_empty.ipynb
@@ -1200,17 +1200,30 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mnotebook controller is DISPOSED. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "√p vector  : [0.80257131 0.59655619]\n",
+      "|x> up to phase: [0.80257131 0.59655619]\n"
      ]
     }
    ],
    "source": [
-    "x_simulator = "
+    "# Get counts where ancilla qubit is 1\n",
+    "anc1_keys   = [k for k in counts if k[-1] == '1']\n",
+    "anc1_total  = sum(counts[k] for k in anc1_keys)\n",
+    "\n",
+    "# Compute probabilites\n",
+    "p0 = counts.get('01', 0) / anc1_total\n",
+    "p1 = counts.get('11', 0) / anc1_total  \n",
+    "\n",
+    "amps = np.sqrt([p0, p1]) # Normalize\n",
+    "\n",
+    "x_simulator = amps / np.linalg.norm(amps) \n",
+    "\n",
+    "print(\"√p vector  :\", amps)\n",
+    "print(\"|x> up to phase:\", x_simulator)\n",
+    "# x_simulator = np.array([1, 0]) * counts.get"
    ]
   },
   {
