Added some linear algebra

--- a/com-308-project_empty.ipynb
+++ b/com-308-project_empty.ipynb
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1561,14 +1561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> Job ID: 11e087cf-eb2e-4bf9-a8f5-12769b047de0\n",
+      ">>> Job ID: 742f04f9-c4dc-42c4-8d27-59c4606bc8f7\n",
       "The estimated expectation values are:  [ 0.677644   -0.15276998  0.65909336  0.0381925 ]\n"
      ]
     }
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1606,12 +1606,17 @@
      "text": [
       "[[ 0.50617284+0.j         -0.10802469-0.46604938j]\n",
       " [-0.10802469+0.46604938j  0.45216049+0.j        ]]\n",
-      "(0.9583333334229929+0j)\n"
+      "(0.9583333332830168+0j)\n"
      ]
     }
    ],
    "source": [
-    "rho = data_simulated[0]*I + data_simulated[1]*X + data_simulated[2]*Y + data_simulated[3]*Z\n",
+    "I_mat = np.array([[1, 0], [0, 1]], dtype=complex)\n",
+    "X_mat = np.array([[0, 1], [1, 0]], dtype=complex)\n",
+    "Y_mat = np.array([[0, -1j], [1j, 0]], dtype=complex)\n",
+    "Z_mat = np.array([[1, 0], [0, -1]], dtype=complex)\n",
+    "\n",
+    "rho = data_simulated[0]*I_mat + data_simulated[1]*X_mat + data_simulated[2]*Y_mat + data_simulated[3]*Z_mat\n",
     "rho /= np.sqrt(2)\n",
     "rho = np.array(rho)\n",
     "print(rho)\n",
@@ -1628,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1638,15 +1643,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_35880\\1132205151.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx_reconstructed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error between the simulated solution and the expected one\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_reconstructed\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mexpected_solution\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_35880\\3077018951.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mx_reconstructed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m...\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error between the simulated solution and the expected one\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_reconstructed\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mexpected_solution\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'ellipsis' and 'complex'"
      ]
     }
    ],
    "source": [
+    "# |x> will be an eigenvector of rho with eigenvalue 1\n",
     "\n",
+    "eigvals, eigvecs = np.linalg.eig(rho)\n",
     "\n",
-    "x_reconstructed = ...\n",
+    "x_reconstructed = \n",
     "\n",
     "print(\"Error between the simulated solution and the expected one\", np.linalg.norm(x_reconstructed - expected_solution))"
    ]
